Task-43333: Regression - bad display(alignment-UI glitches) of task changes in change history. Problem: a bad alignment of the task changes in task's changes tab is displayed. Fix: Task changes should be well displayed with aligned.

--- a/task-management/src/main/webapp/skin/css/tasks.less
+++ b/task-management/src/main/webapp/skin/css/tasks.less
@@ -3013,6 +3013,7 @@
     }
     .changesText {
       max-width: 270px;
+      padding-bottom: 1px;
     }
   }
 }
